blocks/intro/intro.css
.intro {
  margin: 92px auto 0;
  padding: 0 0 118px 0;
  max-width: 984px;
  width: 100%;
  display: grid;
  grid-template-columns: 24px 1fr 24px;
}

@media screen and (max-width: 768px) {
  .intro {
    margin: 88px auto 0;
  }
}

@media screen and (max-width: 495px) {
  .intro {
    margin: 64px auto 0;
    padding: 0 0 90px 0;
    grid-template-columns: 16px 1fr 16px;
  }
}

